# lazeron

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
